--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.10.1",
     "react-responsive-carousel": "^3.1.50",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-table": "^6.10.3"
   },
   "scripts": {
     "start": "react-scripts start",
