--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "node-sass": "^4.12.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-redux": "^7.1.1",
     "react-responsive-carousel": "^3.1.50",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "react-table": "^6.10.3"
+    "react-table": "^6.10.3",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,6 +48,7 @@
     "eslint-plugin-react": "7.14.3",
     "eslint-plugin-react-hooks": "1.7.0",
     "prettier-eslint": "^9.0.0",
-    "react-table": "^6.10.3"
+    "react-table": "^6.10.3",
+    "redux-logger": "^3.0.6"
   }
 }
