--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
     "node": "8.12.0"
   },
   "dependencies": {
+    "node-gyp": "^6.1.0",
     "node-sass": "^4.12.0",
-    "react": "^16.10.1",
-    "react-dom": "^16.10.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-redux": "^7.1.1",
     "react-responsive-carousel": "^3.1.50",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.2.0",
     "react-table": "^6.10.3",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
