--- a/public/graphql.yaml
+++ b/public/graphql.yaml
@@ -764,7 +764,7 @@ spec:
       """A cursor for use in pagination"""
       cursor: String!
     }
-    type Root {
+    type OldRoot {
       allFilms(after: String, first: Int, before: String, last: Int): FilmsConnection
       film(id: ID, filmID: ID): Film
       allPeople(after: String, first: Int, before: String, last: Int): PeopleConnection
