--- a/public/graphql.yaml
+++ b/public/graphql.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   type: graphql
   lifecycle: production
-  owner: Vijay Malhan
+  owner: team-b
   definition: |
     schema {
       query: Root
